[package]
name = "tupac-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4"}
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.1", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "coordinator"
path = "src/coordinator/main.rs"

[[bin]]
name = "sdmon"
path = "src/sdmon/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
